tests/paczka1/fuzzy1/35168659.err
Error in line 2: Jsm S797 21,7
Error in line 8: xoxe A971 11,4
Error in line 19: ynvhitt8uu S797 84,9
Error in line 29: 9snn9e A204 32,6
Error in line 32: 9snn9e A213 78,1
Error in line 28: Jsm A213 47,9
